Added capability to write the validation results to a file. Added capability to pass in a configuration file to set the default behaviors of VTool.